[package]
name = "proto-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
prost = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["serde_derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }

[build-dependencies]
prost-build = "0.12"
tonic-build = { version = "0.11" }

[[bin]] # Bin to run the HelloWorld REST server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld REST client
name = "helloworld-client"
path = "src/client.rs"